	- updthltypes: tool to convert existing hltypes to -shared

0.22 Sat Jun 19 17:06:43 GMTDT 2010
        - mkxxtype -glo -rep: fix
	- pod indentation
	- rmtype: remove whole label family, including attribute type
	- setcs: fix to support all default options

0.23 Thu Jan 27 14:17:36 GMTST 2011
        - bugfix: ensure ordinary types
	- bugfix: mklbtype -rep -fam creates a Rm attype
	- fixed missing feature: mklbtype -fam after archiving, creates an EcInc
	- rmlabel adds the attribute on all versions labelled with fixed labels
	- added extra/Examples.pod

0.24 Wed Feb  2 18:34:46 GMTST 2011
        - extra/Examples.pod: fixes and additions
	- des: added from DSB.pm, adapted to genealogy (possibly multiple parents)
	- des -family lbtype:XXX
	- rmtype: fix for family types
	- mklbtype -arc locks the types archived

0.25 Fri Mar 11 16:48:50 GMT 2011
        - Examples.pod: typos, and switched setcs for mkview -equiv
	- des -fam n: only the most recent equivalent fixed types
	- mkview -clone -equiv TTT,1-Jan --requires Date::Parse

0.26 Tue Mar 22 17:03:20 GMTST 2011
        - des -par/fam: fix to support no argument
	- mkview -equiv: non local brtype in config spec

0.27 Mon Jul 11 19:19:46 GMTDT 2011
	- co/mkbranch: display mkbranch stderr
	- fix mk*type -arc with multiple arguments
	- fix mk*type -rep for non family types;
	  for family types: -glo/-ord also affects equivalent types;
	    no other flag drops back to non-family types (removes hyperlinks)
	- fix to mklbtype -glo -fam
	- fix rmtype with family lbtype without a previous equivalent fixed
        - fixes to revert, parse vtree, unco/rmbranch
	- optimization: co doesn't use lsvtree if /main/0 exists
	- cptype: support for family types, and linking global types
	- mklbtype -inc on global type
	- lsgen: fix for vob root; -a implicit with -d;
	  print offsprings in addition to siblings
	- avoid lsvtree when possible (lsgen, ci, diff, des)
	- ci -revert: this doesn't need genealogy--only the physical parent.